--- a/tests/real-test-data.local.php.dist
+++ b/tests/real-test-data.local.php.dist
@@ -3,7 +3,7 @@
         'api_key' => '',
         'api_secret' => '',
 
-        'http_client_options' => []
+        'http_client_options' => [],
 
         'email' => '',
         'id' => '',
